; ModuleID = '/home/carl/AnghaBench/systemd/src/shared/extr_machine-image.c_image_find_harder.c'
source_filename = "/home/carl/AnghaBench/systemd/src/shared/extr_machine-image.c_image_find_harder.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @image_find_harder(i32 %0, i8* %1, i32** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32**, align 8
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i32** %2, i32*** %7, align 8
  %8 = load i8*, i8** %6, align 8
  %9 = call i64 @image_name_is_valid(i8* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %3
  %12 = load i32, i32* %5, align 4
  %13 = load i8*, i8** %6, align 8
  %14 = load i32**, i32*** %7, align 8
  %15 = call i32 @image_find(i32 %12, i8* %13, i32** %14)
  store i32 %15, i32* %4, align 4
  br label %20

16:                                               ; preds = %3
  %17 = load i8*, i8** %6, align 8
  %18 = load i32**, i32*** %7, align 8
  %19 = call i32 @image_from_path(i8* %17, i32** %18)
  store i32 %19, i32* %4, align 4
  br label %20

20:                                               ; preds = %16, %11
  %21 = load i32, i32* %4, align 4
  ret i32 %21
}

declare dso_local i64 @image_name_is_valid(i8*) #1

declare dso_local i32 @image_find(i32, i8*, i32**) #1

declare dso_local i32 @image_from_path(i8*, i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
